--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ path = "src/lib.rs"
 color-eyre = "0.5.11"
 directories = "3.0.2"
 edit = "0.1.3"
+rprompt = "1.0.5"
+slug = "0.1.4"
 structopt = "0.3.21"
 
 [dev-dependencies]
