Using assert_fs and predicates to integration test with a real temporary file system

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,4 +19,4 @@ jobs:
     - name: Build
       run: cargo build --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: chmod +x ./tests/fake-editor.sh && cargo test --verbose
