--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "digital-garden"
 version = "0.1.0"
 authors = ["Marcus Holmgren <marcus.holmgren1@gmail.com>"]
 edition = "2018"
+license = "MIT"
+repository = "https://github.com/marcusholmgren/digital-garden"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
